exports.up = pgm => {
  pgm.createTable('songs', {
    id: {
      type: 'VARCHAR(50)',
      primaryKey: true,
    },
    title: {
      type: 'TEXT',
      notNull: true,
    },
    year: {
      type: 'INT',
      notNull: true,
    },
    performer: {
      type: 'TEXT',
      notNull: true,
    },
    genre: {
      type: 'TEXT',
      notNull: true,
      default: 'Unknown',
    },
    duration: {
      type: 'INT',
    },
    albumId: {
      type: 'VARCHAR(50)',
    },
  });
};

exports.down = pgm => {
  pgm.dropTable('songs');
};