@startuml
entity "Users" as users {
  * id : VARCHAR(50)
  --
  * username : VARCHAR(50)
  * password : TEXT
  * fullname : TEXT
}

entity "Songs" as songs {
  * id : VARCHAR(50)
  --
  * title : TEXT
  * year : INT
  * performer : TEXT
  * genre : TEXT
  * duration : INT
  * albumId : VARCHAR(50)
  * owner : VARCHAR(50)
}

entity "Albums" as albums {
  * id : VARCHAR(50)
  --
  * name : TEXT
  * year : INTEGER
}

entity "Authentications" as authentications {
  * token : TEXT
}

entity "Playlists" as playlists {
  * id : VARCHAR(50)
  --
  * name : TEXT
  * owner : VARCHAR(50)
}

entity "Playlist_Songs" as playlist_songs {
  * id : VARCHAR(50)
  --
  * playlistId : VARCHAR(50)
  * songId : VARCHAR(50)
}

entity "Playlist_Activities" as playlist_activities {
  * id : VARCHAR(50)
  --
  * playlist_id : VARCHAR(50)
  * song_id : VARCHAR(50)
  * user_id : VARCHAR(50)
  * action : VARCHAR(10)
  * time : VARCHAR(50)
}

entity "Collaborations" as collaborations {
  * id : VARCHAR(50)
  --
  * playlist_id : VARCHAR(50)
  * user_id : VARCHAR(50)
}

songs }o--|| albums : "belongs to"
songs }o--|| users : "owned by"
users ||--o{ authentications : "has"
playlists }o--|| users : "owned by"
playlist_songs }o--|| playlists : "contains"
playlist_songs }o--|| songs : "contains"
playlist_activities }o--|| playlists : "related to"
playlist_activities }o--|| songs : "related to"
playlist_activities }o--|| users : "performed by"
collaborations }o--|| playlists : "related to"
collaborations }o--|| users : "involves"
@enduml